# solarSystem

./: CMakeLists.txt  README.md  main.cpp
graphics/shader/: CMakeLists.txt  shaders.cpp  shaders.h
graphics/shader/shaders_src/: shader.fs  shader.vs
systemFunction/: CMakeLists.txt  point_type.hpp  solarSystemLogik.cpp  solarSystemLogik.h
